@@ -42,7 +42,8 @@ database[0].readOnlyUserPwd=@@READONLY_USER_PWD@@
 database[0].schema=@@SCHEMA@@
 database[0].tablespace=@@TABLESPACE@@
 database[0].tablespace_index=@@TABLESPACE_INDEX@@
-database[0].dbversion=8
+database[0].dbversion=9
+database[0].dbVersionName=6.2u1
 database[0].dbdefinition=@@DB_DEFINITION_FILE@@
 database[0].debugLevel=WARNING
 
